# audio_sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  setup.py
audio_sdk/: __init__.py
bindings/python/: module.cpp
configs/: default.audio_sdk.json
docs/: architecture.md
examples/: README.md  __init__.py  record_playback_demo.cpp
examples/cpp/: 01_enumerate_devices.cpp  02_config_file.cpp  03_select_devices.cpp  04_events.cpp  05_recording.cpp  06_playback_and_delete.cpp  07_sessions.cpp  08_fallback_policy.cpp  example_utils.h
examples/python/: 01_enumerate_devices.py  02_config_file.py  03_select_devices.py  04_events.py  05_recording.py  06_playback_and_delete.py  07_sessions.py  08_fallback_policy.py  __init__.py
include/audio_sdk/: audio_manager.h  audio_session.h  config.h  device.h  events.h  status.h
src/: audio_manager.cpp  audio_session.cpp  config.cpp
src/backends/pipewire/: pipewire_backend.cpp  pipewire_backend.h
tests/hil/: test_record_playback_hil.cpp
tests/unit/: test_audio_manager.cpp
